--- a/client/css/comments.css
+++ b/client/css/comments.css
@@ -1,4 +1,5 @@
 /* Comments */
+
 .comment-box, .comment
 {
 	display: block;
@@ -26,6 +27,7 @@ div.comment-entry, div.comment-entry:focus
 	background-color: #fefefe;
 	border: 1px solid #ddd;
 	outline: none;
+	width: 100%;
 }
 
 div#name-entry, div.comment-poster
@@ -40,14 +42,13 @@ div#name-entry, div.comment-poster
 }
 
 /* Force name to be a single line */
-#name-entry { white-space: nowrap; overflow: hidden }
+#name-entry { white-space: nowrap; overflow: hidden; }
 #name-entry br { display: none; }
 #name-entry * { display: inline; white-space: nowrap; }
 
 div#comment-entry
 {
 	display: block;
-	width: 100%;
 	min-height: 5em;
 	height: auto;
 }
@@ -64,3 +65,8 @@ div#comment-entry
 	font-family: "Noto Sans";
 }
 
+.comment-button:hover
+{
+	cursor: pointer;
+	cursor: hand;
+}
